# parallelki

./: README.md
lab1/: CMakeLists.txt  makefile
lab1/src/: lab1.cpp
lab2/integral/: CMakeLists.txt
lab2/integral/src/: integrate_omp.c
lab2/matrix X vector/: CMakeLists.txt
lab2/simpleIteration/: CMakeLists.txt
lab2/simpleIteration/src/: SimpleIterVarTwo.cpp
lab3/matrixThreads/: CMakeLists.txt
lab3/matrixThreads/src/: matrixThreads.cpp
lab3/serverClient/: CMakeLists.txt
lab3/serverClient/headers/: serverClient.h
lab3/serverClient/output/: pow_results.txt  sin_results.txt  sqrt_results.txt  test
lab3/serverClient/src/: main.cpp  test.cpp
lab4/: parallelLab4.py
lab5/: lab5.py
lab6/cpu/: CMakeLists.txt
lab6/cpu/src/: lab6cpu.cpp
lab6/gpu/: CMakeLists.txt
lab6/gpu/src/: lab6gpu.cpp
lab7/: CMakeLists.txt
lab7/src/: lab7cublas.cpp
lab8/: CMakeLists.txt
lab8/src/: lab8cuda.cu
